# construction-maintenance-system

./: .gitignore  2026-05-29-construction-maintenance-system.md  README.md  pyproject.toml
construction_maintenance/: app.py  config.py  db.py  repositories.py  security.py
construction_maintenance/services/: __init__.py  dashboard.py  exports.py  imports.py  ocr.py
construction_maintenance/static/: app.css
construction_maintenance/templates/: _batch_card.html  _icons.html  attendance.html  base.html  batch.html  contracts.html  dashboard.html  expense_categories.html  exports.html  login.html  people.html  project_vouchers.html  projects.html  qualifications.html  settings.html  vouchers.html
construction_maintenance/web/: forms.py  routes.py
docs/superpowers/plans/: 2026-05-30-ai-interview-style-redesign.md  2026-06-02-contract-management.md
docs/superpowers/specs/: 2026-05-29-construction-maintenance-system-design.md  2026-05-30-ai-interview-style-redesign-design.md  (+1 more)
scratch/: check_db.py  check_remote.py  deactivate_category.py  delete_ai_vouchers.py  deploy.py  import_screenshot_data.py  process_expenses.py  query_db.py  rendered_people.html  rendered_qualifications.html  test_chrome.py  test_delete_db.py  test_ocr_api.py  test_render.py  test_vouchers.py  vouchers_page.html
tests/: conftest.py  test_attendance.py  test_dashboard.py  test_db.py  test_exports.py  test_icon_assets.py  test_imports.py  test_ocr.py  test_repositories.py  test_routes.py  test_salary.py  test_security.py  test_settings.py  test_ui_theme.py
