[project]
name = "construction-maintenance"
version = "0.2.21"
description = "A lightweight construction engineering maintenance system."
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0",
  "openpyxl>=3.1",
  "python-dateutil>=2.9",
  "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["construction_maintenance*"]
